[package]
name = "docrobot"
version = "0.1.0"
authors = ["Marcelo Cardoso <marcelo@eutiveumsonho.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tool to help you build a monorepo for your documentation generated with jsdoc"
readme = "README.md"
homepage = "https://github.com/eutiveumsonho/docs"
repository = "https://github.com/eutiveumsonho/docs"
keywords = ["cli", "jsdoc"]
categories = ["command-line-utilities"]

[lib]
name = "docrobot"
path = "lib.rs"

[[bin]]
name = "docrobot"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }